
0.07  2013-07-18

0.06  2013-07-17
  - Added GridFS support.
  - Added modules Mango::GridFS, Mango::GridFS::Reader and
    Mango::GridFS::Writer.
  - Added gridfs method to Mango::Database.
  - Improved Mango::BSON performance. (avkhozov)
  - Fixed non-blocking connection pool timing bug.
  - Fixed ensure_index argument bug.

0.05  2013-07-06
  - Changed heuristics for number detection in Mango::BSON to better line up
    with user expectations.
  - Changed to_epoch in Mango::BSON::Time to return a high resolution time.
  - Added connection pool support for non-blocking operations.
  - Added max_connections attribute to Mango.
  - Added drop_index, index_information and stats methods to
    Mango::Collection.
  - Added to_string method to Mango::BSON::ObjectID.
  - Added to_string method to Mango::BSON::Time.
  - Added stats method to Mango::Database.
  - Added TO_JSON method to Mango::BSON::Binary.
  - Added TO_JSON method to Mango::BSON::Time.
  - Improved compatibility with Mojolicious 4.0.
  - Improved Mango::BSON performance. (avkhozov)
  - Improved Mango::BSON::ObjectID to validate object ids.
  - Improved exception handling for commands.
  - Fixed support for empty keys in Mango::BSON.
  - Fixed a few memory leaks.

0.04  2013-02-10
  - Added collection_names method to Mango::Database.
  - Added aggregate, build_index_name, find_and_modify map_reduce and save
    methods to Mango::Collection.
  - Added distinct method to Mango::Cursor.
  - Changed remove and update methods in Mango::Collection to return the
    number of documents affected.
  - Fixed exception handling for commands.

0.03  2013-02-09
  - Added hint, snapshot and tailable attributes to Mango::Cursor.
  - Added create, drop and ensure_index methods to Mango::Collection.
  - Added build_query, clone and explain methods to Mango::Cursor.
  - Added command_error and query_failure methods to Mango::Protocol.
  - Fixed array encoding in Mango::BSON.