@@ -17,7 +17,9 @@ $gridfs->$_->remove for qw(files chunks);
 my $writer = $gridfs->writer;
 $writer->filename('foo.txt')->content_type('text/plain')
   ->metadata({foo => 'bar'});
-my $oid    = $writer->write('hello ')->write('world!')->close;
+ok !$writer->is_closed, 'file has not been closed';
+my $oid = $writer->write('hello ')->write('world!')->close;
+ok $writer->is_closed, 'file has been closed';
 my $reader = $gridfs->reader;
 is $reader->tell, 0, 'right position';
 $reader->open($oid);
@@ -48,6 +50,7 @@ $gridfs->$_->drop for qw(files chunks);
 $writer = $gridfs->writer->chunk_size(4);
 $writer->filename('foo.txt')->content_type('text/plain')
   ->metadata({foo => 'bar'});
+ok !$writer->is_closed, 'file has not been closed';
 my ($fail, $result);
 my $delay = Mojo::IOLoop->delay(
   sub {
@@ -79,6 +82,7 @@ my $delay = Mojo::IOLoop->delay(
 $delay->wait;
 ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
+ok $writer->is_closed, 'file has been closed';
 $reader = $gridfs->reader;
 $fail   = undef;
 $reader->open(
@@ -205,6 +209,42 @@ ok !$mango->is_active, 'no operations in progress';
 ok !$fail, 'no error';
 is $results[0], 'One', 'right content';
 is $results[1], 'Two', 'right content';
+$gridfs->$_->drop for qw(files chunks);
+
+# File already closed
+$writer = $gridfs->writer->filename('test.txt');
+ok !$writer->is_closed, 'file has not been closed';
+$oid = $writer->write('Test')->close;
+ok $writer->is_closed, 'file has been closed';
+eval { $writer->write('123') };
+like $@, qr/^File already closed/, 'right error';
+$fail = undef;
+$writer->write(
+  '123' => sub {
+    my ($writer, $err) = @_;
+    $fail = $err;
+    Mojo::IOLoop->stop;
+  }
+);
+Mojo::IOLoop->start;
+ok !$mango->is_active, 'no operations in progress';
+like $fail, qr/^File already closed/, 'right error';
+ok $writer->is_closed, 'file is still closed';
+is $writer->close, $oid, 'right result';
+($fail, $result) = ();
+$writer->close(
+  sub {
+    my ($writer, $err, $oid) = @_;
+    $fail   = $err;
+    $result = $oid;
+    Mojo::IOLoop->stop;
+  }
+);
+Mojo::IOLoop->start;
+ok !$mango->is_active, 'no operations in progress';
+ok !$fail, 'no error';
+is $result, $oid, 'right result';
+ok $writer->is_closed, 'file is still closed';
 $gridfs->$_->drop for qw(files chunks);
 
 # Missing file
